further alignment corrections
boxes dynamically fit screen; map zoom dynamically change to match box size which changes with screen

--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,12 @@
 #chart_1 {
     background-color: rgba(128,128,128,.2);
     border: medium solid #999;
-    margin: 10px 18px 0 0;
-    float: right;
+    margin: 18px 20px 0 0;
 }
 
 #chart_2 {
     background-color: rgba(128,128,128,.2);
     border: medium solid #999;
-    margin: 10px 20px 0 0;
+    margin: 8px 20px 0 0;
 
 }
